Updated and correct the name

--- a/cv/Saifullah_Sadi_CV.tex
+++ b/cv/Saifullah_Sadi_CV.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % ATS-Friendly Resume in LaTeX (2 Pages)
-% Author: Safiullah Sadi
+% Author: Saifullah Sadi
 %-------------------------
 
 \documentclass[10.5pt,a4paper]{article}
@@ -36,7 +36,7 @@
 % HEADER
 %------------------------
 \begin{center}
-    {\Large\bfseries SAFIULLAH SADI}\\[4pt]
+    {\Large\bfseries Saifullah SADI}\\[4pt]
     Full-Stack Software Engineer | Unity Game Developer | Geospatial Specialist\\[4pt]
     saifullahsadi@hotmail.com | linkedin.com/in/xaifullahxady | github.com/Xaifullah\\
     Pakistan | Open to Remote Work
