Updated Contacts in cv

--- a/cv/Saifullah_Sadi_CV.tex
+++ b/cv/Saifullah_Sadi_CV.tex
@@ -1,6 +1,6 @@
 %-------------------------
 % ATS-Friendly Resume in LaTeX (2 Pages)
-% Author: Saifullah Sadi
+% Author: Safiullah Sadi
 %-------------------------
 
 \documentclass[10.5pt,a4paper]{article}
@@ -36,10 +36,10 @@
 % HEADER
 %------------------------
 \begin{center}
-    {\Large\bfseries Saifullah SADI}\\[4pt]
+    {\Large\bfseries SAFIULLAH SADI}\\[4pt]
     Full-Stack Software Engineer | Unity Game Developer | Geospatial Specialist\\[4pt]
     saifullahsadi@hotmail.com | linkedin.com/in/xaifullahxady | github.com/Xaifullah\\
-    Pakistan | Open to Remote Work
+    +92-3366633644 | +92-3101612030 \\ Pakistan | Open to Remote Work
 \end{center}
 
 \vspace{4pt}
