Updated cv with details

--- a/cv/Saifullah_Sadi_CV.tex
+++ b/cv/Saifullah_Sadi_CV.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,sans]{article}
+\documentclass[9pt,a4paper,sans]{article}
 
 % Packages for layout and styling
 \usepackage[utf8]{inputenc}
@@ -22,10 +22,10 @@
 
 % Section styling
 \titleformat{\section}{\large\bfseries\uppercase}{}{0em}{}[\titlerule]
-\titlespacing{\section}{0pt}{12pt}{8pt}
+\titlespacing{\section}{0pt}{11pt}{5pt}
 
 % Custom list styling
-\setlist[itemize]{leftmargin=0.15in, nosep, topsep=2pt}
+\setlist[itemize]{leftmargin=0.25in, nosep, topsep=1pt}
 
 \begin{document}
 
@@ -58,12 +58,14 @@ Senior Software Engineer with over 10 years of experience in real-time 3D, game 
 
 \textbf{Big Immersive Pvt Ltd} \hfill \textbf{Dec 2022 -- Feb 2026 (3.2Y)} \\
 \textit{Sr. Software Engineer} \hfill Lahore, Pakistan
-\begin{itemize}
-     \item AI-Driven development in \textbf {MERN stack using CLAUDE} for fast speed, modular and architectural code and CI/CD pipelines \textbf{React/Vue, Express Node, MongoDB}.
-    \item Developing a geospatial software solution utilizing \textbf{Cesium.js, Node.js, Vue.js, and React.js}.
-    \item Implementing advanced geospatial calculations, real-time visualization, and system integrations in \textbf{Unreal Engine} and \textbf{Unity}.
-    \item Applying Unreal Engine for prototyping visualization workflows and extending learning into production-grade contexts.
-    \item Developing multiplayer experiences, custom tools, and Web3.0 integrations.
+\begin{itemize}[leftmargin=*, noitemsep, topsep=0pt]
+    \item \textbf{AI-Driven Full-Stack:} Developed modular MERN/PERN applications and CI/CD pipelines using \textbf{Claude, React/Vue, Node.js, and PostgreSQL}.
+    \item \textbf{Geospatial Engineering:} Built high-performance solutions using \textbf{Cesium.js} with integrated visualizations in \textbf{Vue.js and React}.
+    \item \textbf{Engine Development:} Implemented advanced geospatial calculations and real-time system integrations in \textbf{Unreal Engine} and \textbf{Unity}.
+    \item \textbf{Immersive Tech:} Engineered \textbf{multiplayer experiences}, custom developer tools, and \textbf{Web3.0} integrations.
+    \item \textbf{System Architecture:} Designed reusable \textbf{RESTful inventory systems} and managed complex, large-scale UI user flows.
+    \item \textbf{Optimization:} Delivered a \textbf{60 FPS multiplayer sandbox} featuring custom teleportation and interactive 2D-to-3D map mechanics.
+    \item \textbf{Product Leadership:} Led a \textbf{3D Avatar Generator (WebGL)} from POC to production, overseeing data modeling, SDK development, and cross-platform distribution.
 \end{itemize}
 
 \vspace{8pt}
@@ -73,6 +75,7 @@ Senior Software Engineer with over 10 years of experience in real-time 3D, game 
 \begin{itemize}
     \item Managed hyper-casual genre prototyping from concept to final product in a rapid-action environment.
     \item Collaborated with art and design teams to create highly engaged user experiences.
+    \item Published titles and analyses the D1 to D7 analytics \& improved to meet KPIs.
 \end{itemize}
 
 \vspace{8pt}
@@ -80,7 +83,7 @@ Senior Software Engineer with over 10 years of experience in real-time 3D, game 
 \textbf{MITByte} \hfill \textbf{March 2018 -- Aug 2019 (1.5Y)} \\
 \textit{Project Manager \& Tech Lead} \hfill Lahore, Pakistan
 \begin{itemize}
-    \item Led technical development and project management for hyper-casual game portfolios.
+    \item Led technical development and project management for simulation, action, shooting game portfolios.
     \item Oversaw rapid prototyping cycles and cross-functional team collaboration.
 \end{itemize}
 
@@ -90,6 +93,8 @@ Senior Software Engineer with over 10 years of experience in real-time 3D, game 
 \textit{Team Lead} \hfill Lahore, Pakistan
 \begin{itemize}
     \item Directed development teams in the creation and optimization of mobile game titles.
+    \item Optimized draw call by 40\% using optimizations tactics.
+    \item Analysed dashboards and improved gameplay user sessions. Enhanced user acquisition.
 \end{itemize}
 
 \vspace{8pt}
@@ -97,7 +102,8 @@ Senior Software Engineer with over 10 years of experience in real-time 3D, game 
 \textbf{Sunstar Technologies} \hfill \textbf{Sep 2015 -- Aug 2016 (1Y)} \\
 \textit{Sr. Unity3D Game Developer} \hfill Lahore, Pakistan
 \begin{itemize}
-    \item Developed gameplay mechanics and systems for hyper-casual titles using Unity3D.
+    \item Developed gameplay mechanics and systems for action shooting titles using Unity3D.
+    \item Published titles with millions of downloads and maximise revenue.
 \end{itemize}
 
 \vspace{8pt}
@@ -112,10 +118,11 @@ Senior Software Engineer with over 10 years of experience in real-time 3D, game 
 \section{Key Projects}
 \begin{itemize}
     \item \textbf{Geospatial Defense Simulation:} Developed 3D strategic defense simulations in Cesium.js, integrating dynamic weather systems and complex spatial analysis tools including Line of Sight (LOS) and 3D Viewshed Analysis.
+    \item \textbf{Unity Terrain Generator:} Plugin for generating real-world terrain meshes/Unity terrains from elevation data.
     \item \textbf{Cardano Island 3D (Multiplayer Metaverse):} Real-world 3D metaverse experience in Unity for the Cardano community featuring land ownership and deeds.
     \item \textbf{Maians (Avatar Creator Tool):} A 3D avatar platform integrating AI, Social Identity, and Web3.
     \item \textbf{Crib \& Condo / Gamer's Lounge:} Multiplayer virtual 3D spaces for the Virtua Metaverse allowing for personalization and social interaction.
-    \item \textbf{Unity Terrain Generator:} Plugin for generating real-world terrain meshes/Unity terrains from elevation data.
+
 \end{itemize}
 % Personal Projects
 \section{Personal Projects}
